--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,70 @@
-header {
-	background-color: #3fa9f5;
+* {
+	box-sizing: border-box;
 }
 
-#nav,
-#search {
+body {
+	font-family: 'Varela Round', sans-serif;
+	line-height: 1.6;
+	color: #3a3a3a;
+	margin: 0;
+	background-color: #3FADF5;
+	display: block;
+}
+
+h1 {
 	color: #fff;
-	width: 50px;
-	height: 50px;
-	padding: 5px 10px;
+	text-align: center;
+	margin: 30px auto;
 }
 
-#search {
-	float: right;
+form {
+	margin: 0 auto;
+	text-align: center;
 }
+
+input {
+	display: block;
+	margin: 20px auto;
+	text-align: center;
+	width: 80%;
+	height: 50px;
+	border: none;
+	font-size: 20px;
+}
+
+input[type="submit"] {
+	color: #fff;
+	background: #494F7F;
+}
+
+button {
+	display: block;
+	margin: 20px auto;
+	width: 80%;
+	height: 50px;
+	border: none;
+	font-size: 20px;
+	background: #494F7F;
+	color: #fff;
+}
+
+a {
+	display: block;
+	text-align: center;
+	text-decoration: none;
+	font-size: 15px;
+	color: #fff;
+}
+
+a:hover {
+	color: ;
+}
+
+
+
+
+
+
+
+
+
