--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,24 @@
 }
 
 body {
-	font-family: 'Varela Round', sans-serif;
-	line-height: 1.6;
-	color: #3a3a3a;
-	margin: 0;
-	background-color: #3FADF5;
+	background-color: #00ab90;
 	display: block;
+	/*font-family: 'Varela Round', sans-serif;*/
+	margin: 0;
 }
 
-h1 {
-	color: #fff;
+div {
+	display: block;
 	text-align: center;
-	margin: 30px auto;
+}
+
+img {
+	background-color: #fff;
+	border-radius: 50%;
+	border: 2px solid #fff;
+	width: 100px;
+	height: 100px;
+	margin: 0 auto;
 }
 
 form {
@@ -23,42 +29,84 @@ form {
 }
 
 input {
-	display: block;
-	margin: 20px auto;
-	text-align: center;
-	width: 80%;
-	height: 50px;
 	border: none;
-	font-size: 20px;
-	color: #7F7F7F;
+	border-radius: 5px;
+	/*color: #d9d9d9;*/
+	display: block;
+	margin: 10px auto;
+	width: 50%;
+	height: 30px;
+	padding: 5px 0 5px 5px;
+	font-weight: 300;
+}
+
+/* change input placeholder color */
+/* chrome */
+input::-webkit-input-placeholder {
+	color: #e3e3e3 !important;
+}
+
+/* Firefox 18- */
+input:-moz-placeholder { 
+	color: #e3e3e3 !important;  
+}
+
+/* Firefox 19+ */
+input::-moz-placeholder {  
+	color: #e3e3e3 !important;  
+}
+
+/* IE */
+input:-ms-input-placeholder {  
+	color: #e3e3e3 !important;  
 }
 
 input[type="submit"] {
+	background-color: #016a5a;
 	color: #fff;
-	background: #494F7F;
+	font-size: 13px;
 }
 
 input[type="submit"]:hover {
-	color: #000;
+	color: #02F6D1;
 }
 
 a {
-	display: block;
-	text-align: center;
-	text-decoration: none;
-	font-size: 15px;
 	color: #fff;
+	font-weight: 300;
+	text-decoration: none;
 }
 
 a:hover {
 	color: #000;
 }
 
+span {
+	color: #fff;
+}
 
+hr {
+	border: 1px solid #fff;
+}
 
+#sign-up-btn {
+	margin-right: 5px;
+}
 
+#forget-btn {
+	margin-left: 5px;
+}
 
+.profile-image {
+	padding-top: 5px;
+	margin: 100px auto 10px;
+}
 
+.sign-in-wrapper {
+	margin-bottom: 100px;
+}
 
-
-
+.sign-up {
+	max-width: 200px;
+	margin: 0 auto;
+}
