--- a/css/mission.css
+++ b/css/mission.css
@@ -38,6 +38,7 @@ input[type="text"] {
   border: 2px solid #00ab90;
   border-radius: 15px;
   height: 30px;
+  margin-right: 20px;
 }
 
 .btn:hover {
