--- a/public/css/mission.css
+++ b/public/css/mission.css
@@ -26,14 +26,24 @@ a:hover {
 input[type="text"] {
   background: transparent;
   border: 3px solid #00ab90;
-  border-radius: 15px;
   width: 200px;
   height: 30px;
   padding-left: 10px;
   outline: none;
 }
 
-.btn{
+.comment {
+  margin: 15px;
+  width: 90%;
+  height: 100px;
+}
+
+.addComment {
+  margin-left: 15px;
+}
+
+.btn,
+.addComment {
   background: #00ab90;
   border: 2px solid #00ab90;
   border-radius: 15px;
@@ -41,7 +51,8 @@ input[type="text"] {
   margin-right: 20px;
 }
 
-.btn:hover {
+.btn:hover,
+.addComment:hover {
   color: #fff;
 }
 
@@ -189,6 +200,7 @@ textarea {
   display: block;
   width: 100%;
   height: 200px;
+  resize: none;
 }
 
 fieldset {
